# currency-exchange

./: Dockerfile  LICENSE  README.md  docker-compose.yml  example.env  notes.ipynb  pyproject.toml
currency_exchange/: settings.py  urls.py
currency_exchange/api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
currency_exchange/api/management/commands/: fetch_latest_rates.py
currency_exchange/api/migrations/: 0001_initial.py  0002_populate.py
currency_exchange/api/tests/: test_admin.py  test_models.py  test_setup.py  test_views.py
templates/admin/: exchangerate_changelist.html
