[tool.poetry]
name = "app"
version = "0.1.0"
description = "Currency exchange API"
authors = ["Kacper Akdag-Ochnik <kacperochnik01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
